src/objects/Indicative_Cost__c.object
<CustomObject>
    <fields>
        <fullName>Break_Clause__c</fullName>
        <label>Break Clause</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Concession_Percent__c</fullName>
        <label>Concession %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Concession__c</fullName>
        <inlineHelpText>(Rent per sq ft per month / 100) x Concession %</inlineHelpText>
        <label>Concession</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Indicative Costs</relationshipLabel>
        <relationshipName>Indicative_Costs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Density__c</fullName>
        <inlineHelpText>What is the density of occupation within the space? Think about number of people per sq ft and separate rooms.</inlineHelpText>
        <label>Density</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Body__c</fullName>
        <label>Email Body</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Insurance_per_sq_ft__c</fullName>
        <inlineHelpText>Indicative Cost set on Property / Suite record</inlineHelpText>
        <label>Insurance per sq ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Indicative Costs</relationshipLabel>
        <relationshipName>Indicative_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Indicative Costs</relationshipLabel>
        <relationshipName>Indicative_Costs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rent_per_sq_ft__c</fullName>
        <inlineHelpText>Indicative Cost set on Property / Suite record</inlineHelpText>
        <label>Rent per sq ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Charge_per_sq_ft__c</fullName>
        <inlineHelpText>Indicative Cost set on Property / Suite record</inlineHelpText>
        <label>Service Charge per sq ft</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Size_sq_ft__c</fullName>
        <inlineHelpText>How much space is the customer looking to take?</inlineHelpText>
        <label>Size sq. ft.</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specification__c</fullName>
        <inlineHelpText>What level of specification is required?</inlineHelpText>
        <label>Specification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Classic</fullName>
                </value>
                <value>
                    <fullName>Tailored</fullName>
                </value>
                <value>
                    <fullName>Bespoke</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Suite</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Inventory__c.Property__c</field>
                <operation>equals</operation>
                <valueField>$Source.Property__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Indicative Costs</relationshipLabel>
        <relationshipName>Indicative_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <inlineHelpText>Number of years</inlineHelpText>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Per_Annum__c</fullName>
        <inlineHelpText>Total Cost Per Month x 12</inlineHelpText>
        <label>Total Cost Per Annum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Per_Month__c</fullName>
        <inlineHelpText>(((Rent per sq ft per month + Service Charge per sq ft per month + Insurance per sq ft per month) x Size sq ft) - Concession £) / 12</inlineHelpText>
        <label>Total Cost Per Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Per_Quarter__c</fullName>
        <inlineHelpText>Total Cost Per Month x 3</inlineHelpText>
        <label>Total Cost Per Quarter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Design_Cost__c</fullName>
        <inlineHelpText>Calculations set by the Design team</inlineHelpText>
        <label>Total Design Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Indicative Cost</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indicative Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_For_Contact_Email_Defined</fullName>
        <active>true</active>
        <description>A user cannot create Indicative Cost without Contact Email (Every time when Indicative Cost created, we send it to the customer).</description>
        <errorConditionFormula>ISBLANK(Contact__r.Email)</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>Cannot send to Contact - No Email defined!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Concession_Percent_Between_0_and_100</fullName>
        <active>true</active>
        <errorConditionFormula>OR (
 Concession_Percent__c &lt; 0,
 Concession_Percent__c &gt; 1
)</errorConditionFormula>
        <errorDisplayField>Concession_Percent__c</errorDisplayField>
        <errorMessage>Concession % must be a number from 0 to 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Density_And_Specification_Blank_Error</fullName>
        <active>true</active>
        <description>Specification cannot be blank if Density is not blank</description>
        <errorConditionFormula>NOT(ISPICKVAL(Density__c, &apos;&apos;)) &amp;&amp; ISPICKVAL(Specification__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Specification__c</errorDisplayField>
        <errorMessage>Specification cannot be blank if Density is not blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Density_And_Specification_Not_Blank_Err</fullName>
        <active>true</active>
        <description>Density cannot be blank if Specification is not blank</description>
        <errorConditionFormula>ISPICKVAL(Density__c, &apos;&apos;) &amp;&amp; NOT(ISPICKVAL(Specification__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>Density__c</errorDisplayField>
        <errorMessage>Density cannot be blank if Specification is not blank</errorMessage>
    </validationRules>
</CustomObject>